--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_URL=http://127.0.0.1:8000 # This is the URL of the API
 NEXT_PUBLIC_BASE_URL=https://email-builder-j.vercel.app # This is the URL of the frontend 
+NEXT_PUBLIC_ADMIN_URL=http://localhost:3001 # This is the URL of the frontend 
+NEXT_PUBLIC_COOKIE_DOMAIN=.domain.com
