--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_API_URL=http://127.0.0.1:8000 # This is the URL of the API
 NEXT_PUBLIC_BASE_URL=http://localhost:3000 # This is the URL of the frontend 
+NEXT_PUBLIC_ADMIN_URL=http://localhost:3001 # This is the URL of the frontend 
+NEXT_PUBLIC_COOKIE_DOMAIN=.localhost
