--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/[locale]/auth/components/Welcome/Header", "src/Components/Canvas", "middleware.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/[locale]/auth/components/Welcome/Header", "src/components/Builder/Canvas", "middleware.js"],
   "exclude": ["node_modules"]
 }
